[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/PathToggle.gd" type="Script" id=1]
[ext_resource path="res://assets/SpaceMono-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/SpaceMono-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/SpaceMono-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/util/LevelManager.gd" type="Script" id=5]
[ext_resource path="res://src/util/GameManager.gd" type="Script" id=6]
[ext_resource path="res://src/PauseButton.gd" type="Script" id=7]
[ext_resource path="res://assets/bg.png" type="Texture" id=8]
[ext_resource path="res://assets/x-btn.png" type="Texture" id=9]
[ext_resource path="res://assets/roundedRect.png" type="Texture" id=10]
[ext_resource path="res://assets/playBtn.png" type="Texture" id=11]
[ext_resource path="res://assets/current-arrow.png" type="Texture" id=12]
[ext_resource path="res://assets/deleteBtn.png" type="Texture" id=13]
[ext_resource path="res://assets/restartBtn.png" type="Texture" id=14]
[ext_resource path="res://assets/sounds/button-click.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/pausebutton.png" type="Texture" id=16]
[ext_resource path="res://assets/tut-btn.png" type="Texture" id=17]
[ext_resource path="res://assets/editBtn.png" type="Texture" id=18]
[ext_resource path="res://assets/wind-arrow.png" type="Texture" id=19]
[ext_resource path="res://assets/frame.png" type="Texture" id=20]
[ext_resource path="res://assets/path-toggle2.png" type="Texture" id=21]
[ext_resource path="res://assets/saveBtn.png" type="Texture" id=22]
[ext_resource path="res://assets/perm-wind-arrow.png" type="Texture" id=23]
[ext_resource path="res://assets/path-start-end-prompt.png" type="Texture" id=24]
[ext_resource path="res://assets/path-toggle1.png" type="Texture" id=25]
[ext_resource path="res://assets/beginBtn.png" type="Texture" id=26]
[ext_resource path="res://assets/levelSelect.png" type="Texture" id=27]
[ext_resource path="res://assets/nextLevelBtn.png" type="Texture" id=28]
[ext_resource path="res://assets/exitBtn.png" type="Texture" id=29]
[ext_resource path="res://src/prefabs/ui/PauseMenu.tscn" type="PackedScene" id=30]
[ext_resource path="res://src/prefabs/PermanentPath.tscn" type="PackedScene" id=31]
[ext_resource path="res://src/prefabs/ui/PathEditor.tscn" type="PackedScene" id=32]

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 18
outline_color = Color( 0.105882, 0.14902, 0.196078, 1 )
font_data = ExtResource( 3 )

[node name="GameScene" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="GameManager" type="Node2D" parent="."]
position = Vector2( 3, 0 )
script = ExtResource( 6 )
currents = NodePath("../Currents")
winds = NodePath("../Winds")
permCurrents = NodePath("../PermanentCurrents")
permWinds = NodePath("../PermanentWind")
playBtn = NodePath("../buttons/DefaultButtons/PlayStateBtn")
editBtn = NodePath("../buttons/DefaultButtons/EditStateBtn")
nextLevelBtn = NodePath("../buttons/NextLevelBtn")
pauseBtn = NodePath("../buttons/DefaultButtons/PauseButton")
tutorialBtn = NodePath("../buttons/DefaultButtons/TutButton")
defaultButtons = NodePath("../buttons/DefaultButtons")
defaultUI = NodePath("../UILayer/DefaultUI")
pathToggle = NodePath("../buttons/DefaultButtons/PathToggle")
levelCompleteMenu = NodePath("../levelComplete")
gameCompleteMenu = NodePath("../gameComplete")
settingsMenu = NodePath("../pauseMenu/settings")
creditsMenu = NodePath("../pauseMenu/credits")
pauseMenu = NodePath("../pauseMenu")
gameIntro = NodePath("../gameIntro")
levelManager = NodePath("../LevelManager")
titleTxt = NodePath("../UILayer/DefaultUI/Title")
minPathsTxt = NodePath("../UILayer/DefaultUI/MinPaths")
tutorialWindow = NodePath("../UILayer/TutorialWindow")
tutorialPrompt = NodePath("../UILayer/DefaultUI/TutorialBtnPrompt")

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource( 15 )
volume_db = 7.0
bus = "Sound"

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource( 5 )
levelParent = NodePath("../Level")

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 482, 270 )
z_index = -100
texture = ExtResource( 8 )

[node name="PermanentCurrents" parent="." instance=ExtResource( 31 )]
z_index = -51
z_as_relative = false
radius = 32
color = Color( 0.113725, 0.423529, 0.639216, 1 )
arrowTex = ExtResource( 12 )
pathType = "current"

[node name="Currents" parent="." instance=ExtResource( 32 )]
z_index = -50
z_as_relative = false
type = "current"
radius = 32
color = Color( 0.168627, 0.560784, 0.839216, 1 )
arrowTex = ExtResource( 12 )

[node name="Level" type="Node2D" parent="."]
position = Vector2( 40, 30 )

[node name="Winds" parent="." instance=ExtResource( 32 )]
z_index = 98
z_as_relative = false
type = "wind"
radius = 24
color = Color( 0.168627, 0.560784, 0.839216, 0 )
arrowTex = ExtResource( 19 )
arrowInterval = 8
strength = 0.75

[node name="PermanentWind" parent="." instance=ExtResource( 31 )]
z_index = 99
z_as_relative = false
radius = 24
color = Color( 1, 0, 0, 0 )
arrowTex = ExtResource( 23 )
arrowInterval = 10
pathType = "wind"

[node name="Frame" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 512, 288 )
z_index = 100
texture = ExtResource( 20 )

[node name="PathTut" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 288 )
z_index = 101
texture = ExtResource( 24 )

[node name="gameIntro" type="Node2D" parent="."]
visible = false
position = Vector2( 490, 232 )
z_index = 101

[node name="bg" type="NinePatchRect" parent="gameIntro"]
self_modulate = Color( 0, 0, 0, 0.733333 )
margin_left = -412.0
margin_top = -170.0
margin_right = 456.0
margin_bottom = 282.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TITLE" type="RichTextLabel" parent="gameIntro"]
margin_left = -400.0
margin_top = -127.0
margin_right = 459.0
margin_bottom = -26.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]currents[/center]"
text = "currents"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="gameIntro/TITLE"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="gameIntro/TITLE"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="RichTextLabel2" type="RichTextLabel" parent="gameIntro"]
self_modulate = Color( 0.6, 0.584314, 0.584314, 1 )
margin_left = -400.0
margin_top = 57.0
margin_right = 459.0
margin_bottom = 97.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]make currents/winds by dragging edge-to-edge[/center]"
text = "make currents/winds by dragging edge-to-edge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="gameIntro/RichTextLabel2"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="gameIntro/RichTextLabel2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="RichTextLabel3" type="RichTextLabel" parent="gameIntro"]
self_modulate = Color( 0.6, 0.584314, 0.584314, 1 )
margin_left = -409.0
margin_top = 95.0
margin_right = 459.0
margin_bottom = 139.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]toggle between currents and winds with the path toggle[/center]"
text = "toggle between currents and winds with the path toggle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="gameIntro/RichTextLabel3"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="gameIntro/RichTextLabel3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="RichTextLabel4" type="RichTextLabel" parent="gameIntro"]
self_modulate = Color( 0.6, 0.584314, 0.584314, 1 )
margin_left = -299.0
margin_top = -22.0
margin_right = 392.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/line_separation = -10
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]guide ships to their destinations with currents and winds[/center]"
text = "guide ships to their destinations with currents and winds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="gameIntro/RichTextLabel4"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="gameIntro/RichTextLabel4"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="beginBtn" type="TextureButton" parent="gameIntro"]
margin_left = -33.0
margin_top = 171.0
margin_right = 108.0
margin_bottom = 246.0
texture_normal = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Node2D" parent="."]
position = Vector2( 16, 16 )
z_index = 102

[node name="SaveBtn" type="TextureButton" parent="buttons"]
visible = false
margin_left = -11.0
margin_top = -16.0
margin_right = 105.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, -311 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteBtn" type="TextureButton" parent="buttons"]
visible = false
margin_left = -16.0
margin_top = 58.0
margin_right = 124.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, -311 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelBtn" type="TextureButton" parent="buttons"]
margin_left = 781.0
margin_top = 485.0
margin_right = 1006.0
margin_bottom = 560.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultButtons" type="Node2D" parent="buttons"]

[node name="EditStateBtn" type="TextureButton" parent="buttons/DefaultButtons"]
margin_left = -16.0
margin_top = 485.0
margin_right = 100.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, -311 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayStateBtn" type="TextureButton" parent="buttons/DefaultButtons"]
margin_left = -16.0
margin_top = 485.0
margin_right = 100.0
margin_bottom = 560.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="buttons/DefaultButtons"]
margin_left = 937.0
margin_top = -10.0
rect_pivot_offset = Vector2( 41, 41 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pauseScreen = NodePath("../../../pauseMenu")

[node name="TutButton" type="TextureButton" parent="buttons/DefaultButtons"]
margin_left = -10.0
margin_top = -10.0
margin_right = 54.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 41, 41 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathToggle" type="TextureButton" parent="buttons/DefaultButtons"]
margin_left = 122.0
margin_top = 499.0
margin_right = 299.0
margin_bottom = 602.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 25 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
currentTexture = ExtResource( 25 )
windTexture = ExtResource( 21 )

[node name="levelComplete" type="Node2D" parent="."]
visible = false
position = Vector2( 512, 230 )
z_index = 101

[node name="bg" type="NinePatchRect" parent="levelComplete"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -199.0
margin_top = -126.0
margin_right = 216.0
margin_bottom = 247.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="levelComplete"]
margin_left = -143.0
margin_top = -94.0
margin_right = 172.0
margin_bottom = -45.0
custom_fonts/normal_font = SubResource( 1 )
text = "level complete!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="levelComplete/RichTextLabel"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="levelComplete/RichTextLabel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="nextLevelBtn" type="TextureButton" parent="levelComplete"]
margin_left = -110.0
margin_top = -35.0
margin_right = 115.0
margin_bottom = 40.0
texture_normal = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="editBtn" type="TextureButton" parent="levelComplete"]
margin_left = -49.0
margin_top = 50.0
margin_right = 67.0
margin_bottom = 125.0
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="levelComplete"]
margin_left = -125.0
margin_top = 135.0
margin_right = 150.0
margin_bottom = 210.0
texture_normal = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseMenu" parent="." instance=ExtResource( 30 )]
visible = false
position = Vector2( 517, 270 )
scale = Vector2( 1, 1 )

[node name="gameComplete" type="Node2D" parent="."]
visible = false
position = Vector2( 512, 237 )
z_index = 101

[node name="bg" type="NinePatchRect" parent="gameComplete"]
self_modulate = Color( 0, 0, 0, 0.733333 )
margin_left = -200.0
margin_top = -147.0
margin_right = 215.0
margin_bottom = 243.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="gameComplete"]
margin_left = -134.0
margin_top = -116.0
margin_right = 164.0
margin_bottom = -63.0
custom_fonts/normal_font = SubResource( 1 )
text = "game complete!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="gameComplete/RichTextLabel"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="gameComplete/RichTextLabel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="RichTextLabel2" type="RichTextLabel" parent="gameComplete"]
margin_left = -167.0
margin_top = -55.0
margin_right = 207.0
margin_bottom = 46.0
custom_constants/line_separation = -10
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]minimum paths needed is now shown for each level![/center]"
text = "minimum paths needed is now shown for each level!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="gameComplete/RichTextLabel2"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="gameComplete/RichTextLabel2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="restartBtn" type="TextureButton" parent="gameComplete"]
margin_left = -77.0
margin_top = 49.0
margin_right = 148.0
margin_bottom = 124.0
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitBtn" type="TextureButton" parent="gameComplete"]
margin_left = -54.0
margin_top = 134.0
margin_right = 62.0
margin_bottom = 209.0
texture_normal = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 0

[node name="DefaultUI" type="Node2D" parent="UILayer"]

[node name="Title" type="RichTextLabel" parent="UILayer/DefaultUI"]
margin_left = 1.0
margin_top = 6.0
margin_right = 1025.0
margin_bottom = 70.0
mouse_filter = 2
input_pass_on_modal_close_click = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Title[/center]"
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="UILayer/DefaultUI/Title"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="UILayer/DefaultUI/Title"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="MinPaths" type="RichTextLabel" parent="UILayer/DefaultUI"]
margin_top = 514.0
margin_right = 1022.0
margin_bottom = 599.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Minimum paths: 2[/center]"
text = "Minimum paths: 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="UILayer/DefaultUI/MinPaths"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="UILayer/DefaultUI/MinPaths"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="TutorialBtnPrompt" type="RichTextLabel" parent="UILayer/DefaultUI"]
visible = false
self_modulate = Color( 1, 1, 1, 0.690196 )
margin_left = 80.0
margin_top = 14.0
margin_right = 193.0
margin_bottom = 58.0
custom_constants/line_separation = -5
custom_fonts/normal_font = SubResource( 12 )
text = "Learn how to play <"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialWindow" type="Node2D" parent="UILayer"]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="UILayer/TutorialWindow"]
margin_left = 228.0
margin_top = 149.0
margin_right = 795.0
margin_bottom = 423.0
texture = ExtResource( 10 )
patch_margin_left = 100
patch_margin_top = 100
patch_margin_right = 100
patch_margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="VBoxContainer" parent="UILayer/TutorialWindow"]
margin_left = 230.0
margin_top = 150.0
margin_right = 794.0
margin_bottom = 199.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Txt" type="RichTextLabel" parent="UILayer/TutorialWindow/Header"]
margin_right = 564.0
margin_bottom = 49.0
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Tips[/center]"
text = "Tips"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="VBoxContainer" parent="UILayer/TutorialWindow"]
margin_left = 280.0
margin_top = 212.0
margin_right = 744.0
margin_bottom = 412.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Txt" type="RichTextLabel" parent="UILayer/TutorialWindow/Description"]
modulate = Color( 0.105882, 0.14902, 0.196078, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 85.0
margin_right = 464.0
margin_bottom = 114.0
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
fit_content_height = true

[node name="TextureButton" type="TextureButton" parent="UILayer/TutorialWindow"]
margin_left = 734.0
margin_top = 158.0
margin_right = 774.0
margin_bottom = 198.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="gameIntro/beginBtn" to="GameManager" method="startGame"]
[connection signal="pressed" from="buttons/SaveBtn" to="GameManager" method="onSavePressed"]
[connection signal="pressed" from="buttons/DeleteBtn" to="GameManager" method="_on_DeleteBtn_pressed"]
[connection signal="pressed" from="buttons/NextLevelBtn" to="GameManager" method="_on_NextLevelBtn_pressed"]
[connection signal="pressed" from="buttons/DefaultButtons/EditStateBtn" to="GameManager" method="onButtonPressed"]
[connection signal="pressed" from="buttons/DefaultButtons/PlayStateBtn" to="GameManager" method="onButtonPressed"]
[connection signal="pressed" from="buttons/DefaultButtons/PauseButton" to="buttons/DefaultButtons/PauseButton" method="onPressed"]
[connection signal="pressed" from="buttons/DefaultButtons/TutButton" to="GameManager" method="onTutorialBtnPressed"]
[connection signal="pathToggled" from="buttons/DefaultButtons/PathToggle" to="GameManager" method="onPathToggled"]
[connection signal="pressed" from="buttons/DefaultButtons/PathToggle" to="buttons/DefaultButtons/PathToggle" method="onPressed"]
[connection signal="pressed" from="levelComplete/nextLevelBtn" to="GameManager" method="_on_NextLevelBtn_pressed"]
[connection signal="pressed" from="levelComplete/editBtn" to="GameManager" method="onButtonPressed"]
[connection signal="pressed" from="levelComplete/TextureButton" to="GameManager" method="onLevelSelectBtnPressed"]
[connection signal="pressed" from="gameComplete/restartBtn" to="GameManager" method="_on_restartBtn_pressed"]
[connection signal="pressed" from="gameComplete/exitBtn" to="GameManager" method="_on_exitBtn_pressed"]
[connection signal="pressed" from="UILayer/TutorialWindow/TextureButton" to="GameManager" method="onTutWindowClose"]
